# TestCmakeLicence

./: .gitignore  CMakeLists.txt
TestCmakeLicence/: CMakeLists.txt  TestCmakeLicence.cpp  TestCmakeLicence.h
TestLib/: CMakeLists.txt  my_library.cpp  my_library.h
